--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-332.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇸🇬 新加坡-175.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-778.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-313.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-228.7KB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-266.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-251.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-276.3KB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-438.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-175.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-778.8KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-313.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-251.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
