--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-276.3KB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-438.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-458.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-560.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-357.8KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-458.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 台湾-817.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-820.4KB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-530.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,32 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-560.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-817.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-256.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
