--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-299.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.78MB/s(Youtube:不良林), server: 45.142.167.24, port: 443, type: trojan, password: Aymde8JN7M25qaTPRg, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-330.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-403.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-472.8KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.27MB/s(Youtube:不良林), server: 45.142.167.24, port: 443, type: trojan, password: Aymde8JN7M25qaTPRg, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-299.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
